--- a/environment.yml
+++ b/environment.yml
@@ -5,23 +5,24 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - backports.zstd=1.2.0
   - bcrypt=5.0.0
   - brotli-python=1.2.0
   - bzip2=1.0.8
-  - ca-certificates=2025.10.5
-  - certifi=2025.10.5
+  - ca-certificates=2025.11.12
+  - certifi=2025.11.12
   - cffi=2.0.0
   - charset-normalizer=3.4.4
-  - click=8.3.0
+  - click=8.3.1
   - colorama=0.4.6
   - cryptography=46.0.3
   - cyrus-sasl=2.1.28
   - daiquiri=3.0.0
   - decorator=5.2.1
   - deprecated=1.3.1
-  - exceptiongroup=1.3.0
+  - exceptiongroup=1.3.1
   - fabric=3.2.2
-  - greenlet=3.2.4
+  - greenlet=3.3.0
   - h2=4.3.0
   - hpack=4.1.0
   - hyperframe=6.1.0
@@ -31,9 +32,9 @@ dependencies:
   - invoke=2.2.1
   - keyutils=1.6.3
   - krb5=1.21.3
-  - ld_impl_linux-64=2.44
+  - ld_impl_linux-64=2.45
   - libedit=3.1.20250104
-  - libexpat=2.7.1
+  - libexpat=2.7.3
   - libffi=3.5.2
   - libgcc=15.2.0
   - libgcc-ng=15.2.0
@@ -41,9 +42,9 @@ dependencies:
   - liblzma=5.8.1
   - libnsl=2.0.1
   - libntlm=1.8
-  - libpq=18.0
+  - libpq=18.1
   - libsodium=1.0.20
-  - libsqlite=3.50.4
+  - libsqlite=3.51.1
   - libstdcxx=15.2.0
   - libstdcxx-ng=15.2.0
   - libuuid=2.41.2
@@ -51,17 +52,17 @@ dependencies:
   - libzlib=1.3.1
   - ncurses=6.5
   - openldap=2.6.10
-  - openssl=3.5.4
+  - openssl=3.6.0
   - packaging=25.0
   - paramiko=4.0.0
-  - pip=25.2
+  - pip=25.3
   - pluggy=1.6.0
   - psycopg2=2.9.10
   - pycparser=2.22
   - pygments=2.19.2
-  - pynacl=1.6.0
+  - pynacl=1.6.1
   - pysocks=1.7.1
-  - pytest=8.4.2
+  - pytest=9.0.2
   - python=3.11.14
   - python-json-logger=2.0.7
   - python_abi=3.11
@@ -74,9 +75,8 @@ dependencies:
   - tomli=2.3.0
   - typing_extensions=4.15.0
   - tzdata=2025b
-  - urllib3=2.5.0
+  - urllib3=2.6.1
   - wheel=0.45.1
   - wrapt=1.17.3
-  - zstandard=0.25.0
   - zstd=1.5.7
 prefix: /home/servilla/miniconda3/envs/prune
