--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
+backports.zstd==1.2.0
 bcrypt==5.0.0
 Brotli==1.2.0
-certifi==2025.10.5
+certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.0
+click==8.3.1
 colorama==0.4.6
 cryptography==46.0.3
 daiquiri==3.0.0
 decorator==5.2.1
 Deprecated==1.3.1
-exceptiongroup==1.3.0
+exceptiongroup==1.3.1
 fabric==3.2.2
-greenlet==3.2.4
+greenlet==3.3.0
 h2==4.3.0
 hpack==4.1.0
 hyperframe==6.1.0
@@ -20,14 +21,14 @@ iniconfig==2.3.0
 invoke==2.2.1
 packaging==25.0
 paramiko==4.0.0
-pip==25.2
+pip==25.3
 pluggy==1.6.0
 psycopg2==2.9.10
 pycparser==2.22
 Pygments==2.19.2
-PyNaCl==1.6.0
+PyNaCl==1.6.1
 PySocks==1.7.1
-pytest==8.4.2
+pytest==9.0.2
 python-json-logger==2.0.7
 requests==2.32.5
 setuptools==80.9.0
@@ -35,7 +36,6 @@ six==1.17.0
 SQLAlchemy==1.4.46
 tomli==2.3.0
 typing_extensions==4.15.0
-urllib3==2.5.0
+urllib3==2.6.1
 wheel==0.45.1
 wrapt==1.17.3
-zstandard==0.25.0
